# ChaiScript

./: .clang-format  .decent_ci-Linux.yaml  .decent_ci-MacOS.yaml  .decent_ci-Windows.yaml  .decent_ci-limits.yaml  .decent_ci.yaml  .gitignore  .travis.yml  BUCK  CMakeLists.txt  CMakeSettings.json  DesignGoals.md  Doxyfile.in  LICENSE  appveyor.yml  biicode.conf  buckaroo.json  build_chaiscript_windows.bat  build_package.sh  cheatsheet.md  conanfile.py  description.txt  license.txt  readme.md  readme.txt  releasenotes.md  releasenotes.txt  run_unit_tests.sh  run_unit_tests_win.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
boxedcpp/: CMakeLists.txt  bootstrap.hpp  bootstrap_stl.hpp  boxed_value.hpp  boxedcpp.hpp  proxy_constructors.hpp  proxy_functions.hpp  register_function.hpp  test.cpp  type_info.hpp  unittest.cpp
chaioop/: CMakeLists.txt  chaiscript.hpp  main.cpp
chaiscript/: CMakeLists.txt  callbacktest.cpp  chaiscript.hpp  chaiscript_engine.hpp  chaiscript_eval.hpp  chaiscript_parser.hpp  chaiscript_prelude.hpp  main.cpp  sensors.cpp  wesley_engine.hpp  wesley_eval.hpp
cmake/: CatchAddTests.cmake  CheckCXX11Features.cmake  c++11-test-__func__-N2340.cpp  c++11-test-auto-N2546.cpp  c++11-test-constexpr-N2235.cpp  c++11-test-cstdint.cpp  c++11-test-decltype-N2343.cpp  c++11-test-lambda-N2927.cpp  c++11-test-long_long-N1811.cpp  c++11-test-nullptr-N2431.cpp  c++11-test-nullptr-N2431_fail_compile.cpp  c++11-test-rvalue_references-N2118.cpp  c++11-test-sizeof_member-N2253.cpp  c++11-test-static_assert-N1720.cpp  c++11-test-static_assert-N1720_fail_compile.cpp  c++11-test-variadic_templates-N2555.cpp
contrib/: check_for_tabs.rb  check_for_todos.rb  vim
contrib/codeanalysis/: analyzedata.sh  codeanalysis.sh  heterogenous_array_loop.chai  is_prime.chai  profile_cpp_calls.chai  profile_math.chai  runcppcheck.sh
contrib/geshi/: chaiscript.php
contrib/pkgconfig/: chaiscript.pc.in
contrib/sublimetext/: ChaiScript.YAML-tmLanguage  ChaiScript.tmLanguage
contrib/test/: callbacktest.cpp  dispatchkit_test.cpp  dispatchkit_unittest.cpp  sensors.cpp
contrib/vim/: README.txt
contrib/vim/ftdetect/: chaiscript.vim
dispatch_engine/: proxy_constructors.hpp  test.cpp
dispatchkit/: CMakeLists.txt  bootstrap.hpp  bootstrap_pod.hpp  bootstrap_stl.hpp  boxed_value.hpp  boxedcpp.hpp  dispatchkit.hpp  function_call.hpp  proxy_constructors.hpp  proxy_functions.hpp  register_function.hpp  test.cpp  type_info.hpp  unittest.cpp
dispatchkit/dispatch_engine/: CMakeLists.txt  bootstrap_stl.hpp  boxed_value.hpp  proxy_functions.hpp  type_info.hpp  unittest.cpp
include/chaiscript/: chaiscript.hpp  chaiscript_basic.hpp  chaiscript_defines.hpp  chaiscript_stdlib.hpp  chaiscript_threading.hpp
langkit/: CMakeLists.txt  langkit_lexer.cpp  langkit_lexer.hpp  langkit_parser.cpp  langkit_parser.hpp  main.cpp  unittest.cpp
langkit/tests/: multiline_test.gt  roundtrip.gt
msvc/chai-example/: chai-example.vcproj
msvc/chaiscript/: Boost.vsprops  chaiscript.sln  chaiscript.vcproj
msvc/test_module/: test_module.vcproj
performance_tests/: create_variables.chai  heterogenous_array_loop.chai  profile.chai  profile_cpp_calls_2.cpp  profile_fun_wrappers.cpp  type_conversions.chai
samples/: BUCK  Double_Ended_Queue.cpp  bind.chai  callbacks.chai  eval.chai  example.cpp  factory.cpp  for.chai  for.wes  fun.chai  fun.wes  fun_call_performance.chai  fun_call_performance.cpp  if.chai  if.wes  inheritance.cpp  lambda.chai  lambda.wes  loop_break.chai  loop_break.wes  memory_leak_test.cpp  oper.chai  oper.wes  range.chai  scope.chai  sensors.chai  test_num_exceptions.cpp  vector.chai  vector.wes  while.chai  while.wes
src/: callbacktest.cpp  chaiscript_stdlib.cpp  chaiscript_stdlib_module.cpp  dispatchkit_test.cpp  example.cpp  libfuzzer_client.cpp  main.cpp  memory_leak_test.cpp  multithreaded.cpp  reflection.cpp  sanity_checks.cpp  sensors.cpp  sha3.cpp  stl_extra.cpp  test_module.cpp  work.chai
static_libs/: chaiscript_parser.cpp  chaiscript_parser.hpp  chaiscript_stdlib.cpp  chaiscript_stdlib.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
typelesscpp/: boxedcpp.hpp  proxy_functions.hpp  scripting_constructors.hpp  scripting_functions.hpp  scripting_object.hpp  scripting_system.hpp  scripting_type_info.hpp  test.cpp  type_info.hpp
unittests/: arithmetic_conversions_test.cpp  array_access.chai  array_types.chai  assign_const.chai  bind.chai  bind2.chai  bool_comparisons.chai  bool_not.chai  boxed_cast_test.cpp  break_for.chai  break_while.chai  c_linkage_test.cpp  catch.hpp  char_init.chai  class.chai  class_inside_scope.chai  classification.chai  classification.txt  clone_object.chai  collate.chai  compare_gt.chai  compare_lt.chai  compiled_tests.cpp  concat.chai  const_range_test.chai  continue_for.chai  continue_while.chai  conversion_to_bool.chai  convert_double_string.chai  convert_double_string.txt  convert_int_string.chai  convert_int_string.txt  convert_string_double.chai  convert_string_double.txt  convert_string_int.chai  cpp_lambda_test.cpp  deep_array_lookup.chai  dispatch_functions.chai  divide_by_zero_protection.chai  drop.chai  (+269 more)
unittests/3.x/: assign_const.chai  bind.chai  block_start.chai  bool_not.chai  break_while.chai  char_init.chai  classification.chai  collate.chai  compare_gt.chai  concat.chai  convert_double_string.chai  convert_int_string.chai  convert_string_double.chai  dispatch_functions.chai  drop.chai  equ_shortform.chai  eval_error.chai  exception.chai  exception_finally.chai  filter.chai  float.chai  for_each_range.chai  for_each_retro.chai  function_array_adjacent.chai  function_introspection.chai  function_ordering_test.cpp  function_reassignment.chai  global_const_in_module.chai  if.chai  if_elseif.chai  if_elseif_else.chai  inheritance.chai  instring_eval_more.chai  invalid_function_assignment.chai  invalid_function_reassignment.chai  lambda.chai  list_push_back.chai  load_module.chai  malformed_inline_map.chai  map_access.chai  (+52 more)
wesley/: CMakeLists.txt  main.cpp  wesley.hpp  wesley_engine.hpp  wesley_eval.hpp
(+58 files in other folders)
